# chip8

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: main.yml
apps/: CMakeLists.txt  chip8-sfml.main.cpp
apps/chip8-sfml/: config.cpp  config.hpp  widgets.cpp  widgets.hpp
cmake/: run-conan.cmake  warnings.cmake
src/: CMakeLists.txt
src/ch8/: frame_buffer.hpp  frame_buffer.test.cpp  observable.hpp  observable.test.cpp  system.cpp  system.hpp  system.test.cpp
